--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ h1, h2, h3, p{
 img{
     display: block;
 }
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 /*main text color #212121*/
 /*secondary text color #757575*/
 /*#FFFFFF*/
@@ -30,13 +34,14 @@ img{
     margin-left: auto;
     margin-right: auto;
 }
-.container{outline: 5px solid tomato;}
-.heade{
-    background-color: #FFFFFF
+.container{outline: 2px solid tomato;}
+.header{
+    background-color: var(--secondary-background-color)
 }
 .header-container {
     display: flex;
-    align-items: center;}
+    align-items: center;
+    border-bottom:1px solid var(--secondary-text-color) ;}
 ul{
     list-style: none;}
 
@@ -63,7 +68,7 @@ ul{
     margin-right: 0;
 }
 .link.current{
-    color: #2196F3;}
+    color: var(--accent);}
 .link{
     font-weight: 500;
     font-size: 14px;
@@ -124,7 +129,13 @@ ul{
 .hero {
     background-color: var(--additional-color);
 }
-
+.hero{
+    padding-left: 452px;;
+    padding-right: 452px;
+    padding-top:200px ;
+    padding-bottom:280px ;
+    align-content: center;
+}
 .hero-title {
     font-weight: 900;
     font-size: 44px;
@@ -135,6 +146,8 @@ ul{
     color:var(--text-color);
 }
 .hero-btn {
+    width: 200px;
+    height: 50px;
     font-size: 16px;
     line-height: 1.8;
     font-weight: 700;
@@ -142,7 +155,7 @@ ul{
     background:var(--accent);
     color: var(--text-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4;
+    text-align: center;
     cursor: pointer;
 }
 
@@ -154,6 +167,9 @@ ul{
     letter-spacing: 0.03em;
     color:var(--secondary-text-color);
 }
+.item-features{
+    display:inline-block;
+}
 
 .title-features {
     font-weight: 700;
@@ -162,6 +178,15 @@ ul{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color:var(--main-text-color);
+    width: 270px;
+    margin-bottom: 10px;
+}
+.content-features{
+    width: 270px;
+    margin-right: 30px;
+}
+.content-features:last-child{
+    margin: 0;
 }
 /*work*/
 .work {
@@ -202,6 +227,8 @@ ul{
 }
 /*footer*/
 .footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
     background-color: var(--additional-color);
     border-radius: 0;
 }
