--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ h1, h2, h3, p{
 }
 img{
     display: block;
+    max-width: 100%;
 }
 .section{
     padding-top: 94px;
@@ -169,6 +170,7 @@ ul{
 }
 .item-features{
     display:inline-block;
+    width: 270px;
 }
 
 .title-features {
@@ -178,7 +180,6 @@ ul{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color:var(--main-text-color);
-    width: 270px;
     margin-bottom: 10px;
 }
 .content-features{
@@ -186,7 +187,7 @@ ul{
     margin-right: 30px;
 }
 .content-features:last-child{
-    margin: 0;
+    margin-right: 0;
 }
 /*work*/
 .work {
@@ -201,18 +202,38 @@ ul{
     letter-spacing: 0.03em;
     color:var(--main-text-color);
 }
+.work-list{
+    display: flex;
+}
+.work-item{
+    width: 370px;
+    margin-right: 30px;
+}
+.work-item:last-child{
+    margin-right: 0;
+}
 
 /*team*/
 .team{
     background-color: var(--main-background-color);
 }
+.team-list{
+    display: flex;
+}
 .team-item{
     background-color: var(--secondary-background-color);
+    width: 270px;
+    margin-right:30px;
+}
+.team-item:last-child{
+    margin-right: 0;
 }
 .team-subtitle{
         font-size: 16px;
         font-weight: 500;
         line-height: 1.2;
+        margin-top: 30px;
+        margin-bottom: 10px;
         letter-spacing: 0.03em;
         text-align: center;
         color: var(--main-text-color);
@@ -223,6 +244,7 @@ ul{
         line-height: 1.2;
         letter-spacing: 0.03em;
         text-align: center;
+        margin-bottom: 30px;
         color: var(--secondary-text-color);
 }
 /*footer*/
