--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
     --main-background-color:#F5F4FA;
     --secondary-background-color:#FFFFFF;
     --additional-color:#2F303A;
+    --border-color:#ECECEC;
+    --secondary-border-color:#EEEEEE;
 }
 .page{
     background-color: #FFFFFF;
@@ -35,9 +37,8 @@ img{
     margin-left: auto;
     margin-right: auto;
 }
-.container{outline: 2px solid tomato;}
 .header{
-    background-color: var(--secondary-background-color)
+    background-color: var(--border-color)
 }
 .header-container {
     display: flex;
@@ -258,6 +259,7 @@ ul{
     color: var(--text-color);
 }
 .address-list{
+    padding-left: 0;
     font-size: 14px;
     font-style: normal;
     color: var(--text-color);
@@ -288,7 +290,26 @@ ul{
 }
 
 /*portfolio*/
+.portfolio{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+.btn-list{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+.btn-item{
+    margin-right: 8px;
+}
+.btn-item:last-child{
+    margin-right: 0;
+}
 .portfolio-btn{
+    padding: 6px, 22px;
+    border: none;
+    border-radius: 6px;
     font-family: inherit;
     font-size: 16px;
     font-weight: 500;
@@ -313,7 +334,30 @@ ul{
     letter-spacing: 0.06em;
     color: var(--main-text-color);
 }
+.portfolio-container{
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 0;
+}
+.portfolio-item{
+    width: 380px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    border-bottom:1px solid var(--secondary-border-color) ;
+}
+.portfolio-item:nth-child(3n){
+    margin-right: 0;
+}
+.portfolio-item:nth-child(-n+3){
+    margin-bottom: 0;
+}
+.subtitle{
+    margin-left: 24px;
+    margin-top: 20px;
+}
 .portfolio-content{
+    margin-left: 24px;
+    margin-bottom: 20px;
     font-style: normal;
     font-size: 16px;
     line-height: 30px;
