--- a/css/styles.css
+++ b/css/styles.css
@@ -36,14 +36,15 @@ img{
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 .header{
-    background-color: var(--border-color)
+    background-color: var(--text-color)
 }
 .header-container {
     display: flex;
     align-items: center;
-    border-bottom:1px solid var(--secondary-text-color) ;}
+    border-bottom:1px solid var(--border-color) ;}
 ul{
     list-style: none;}
 
@@ -132,13 +133,15 @@ ul{
     background-color: var(--additional-color);
 }
 .hero{
-    padding-left: 452px;;
-    padding-right: 452px;
+   
     padding-top:200px ;
     padding-bottom:280px ;
     align-content: center;
 }
 .hero-title {
+    margin-right: 452px;
+    margin-left: 452px;
+    width: 696px;
     font-weight: 900;
     font-size: 44px;
     line-height:1.4;
@@ -157,7 +160,6 @@ ul{
     background:var(--accent);
     color: var(--text-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    text-align: center;
     cursor: pointer;
 }
 
