--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ h1, h2, h3, p{
 img{
     display: block;
     max-width: 100%;
+    height: auto;
 }
 .section{
     padding-top: 94px;
@@ -36,19 +37,24 @@ img{
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
 }
 .header{
-    background-color: var(--text-color)
+    background-color: var(--text-color);
+    border-bottom: 1px solid var(--border-color);
 }
 .header-container {
     display: flex;
     align-items: center;
-    border-bottom:1px solid var(--border-color) ;}
+   }
 ul{
-    list-style: none;}
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    }
 
 .logo {
+    padding-top: 24px;
+    padding-bottom: 24px;
     margin-right: 93px;
     font-family: 'Raleway';
     font-weight: 700;
@@ -63,6 +69,9 @@ ul{
 }
 .list-index{
     display: flex;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .item-index{
     margin-right: 50px;
@@ -92,6 +101,9 @@ ul{
     margin-left: auto;
     display: flex;
     align-items: center;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .link-contacts-mail {
     font-weight: 500;
@@ -135,12 +147,12 @@ ul{
 .hero{
    
     padding-top:200px ;
-    padding-bottom:280px ;
-    align-content: center;
+    padding-bottom:200px ;
+    text-align: center;
 }
 .hero-title {
-    margin-right: 452px;
-    margin-left: 452px;
+    margin: auto;
+    margin-bottom: 30px;
     width: 696px;
     font-weight: 900;
     font-size: 44px;
@@ -153,6 +165,7 @@ ul{
 .hero-btn {
     width: 200px;
     height: 50px;
+  
     font-size: 16px;
     line-height: 1.8;
     font-weight: 700;
@@ -170,11 +183,14 @@ ul{
     line-height: 1.7;
     letter-spacing: 0.03em;
     color:var(--secondary-text-color);
+    
 }
 .item-features{
     display:inline-block;
     width: 270px;
-}
+   }
+.item-features:last-child {
+    margin-right: 0;}
 
 .title-features {
     font-weight: 700;
@@ -187,14 +203,12 @@ ul{
 }
 .content-features{
     width: 270px;
-    margin-right: 30px;
-}
-.content-features:last-child{
-    margin-right: 0;
-}
+} 
+
 /*work*/
 .work {
     background-color: var(--text-color);
+    padding-top: 0;
 }
 
 .section-title {
@@ -217,11 +231,15 @@ ul{
 }
 
 /*team*/
+.section-title{
+    margin-bottom: 50px;
+}
 .team{
     background-color: var(--main-background-color);
 }
 .team-list{
     display: flex;
+   
 }
 .team-item{
     background-color: var(--secondary-background-color);
@@ -235,7 +253,6 @@ ul{
         font-size: 16px;
         font-weight: 500;
         line-height: 1.2;
-        margin-top: 30px;
         margin-bottom: 10px;
         letter-spacing: 0.03em;
         text-align: center;
@@ -247,24 +264,42 @@ ul{
         line-height: 1.2;
         letter-spacing: 0.03em;
         text-align: center;
-        margin-bottom: 30px;
         color: var(--secondary-text-color);
 }
+.team-box{
+    padding-top:30px;
+    padding-bottom: 30px;
+}
 /*footer*/
+
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: var(--additional-color);
     border-radius: 0;
 }
+.logo-footer{
+    margin:0;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    color: var(--accent);
+    text-decoration: none;
+}
 .colortext-footer {
     color: var(--text-color);
 }
 .address-list{
+    margin-top: 20px;
     padding-left: 0;
     font-size: 14px;
     font-style: normal;
     color: var(--text-color);
+}
+.footer-item{
+    margin-bottom: 9px;
 }
 .mail{
     font-style: normal;
@@ -309,7 +344,7 @@ ul{
     margin-right: 0;
 }
 .portfolio-btn{
-    padding: 6px, 22px;
+    padding: 6px 22px;
     border: none;
     border-radius: 6px;
     font-family: inherit;
@@ -318,21 +353,38 @@ ul{
     line-height: 1.6;
     letter-spacing: 0.03em;
     text-align: center;
-    background: #F5F4FA;
+    background:var(--main-background-color);
     color: var(--main-text-color);
-
 }
 .portfolio-btn:hover,
-.portfolio-btn:focus{   
+.portfolio-btn:focus {
     background: var(--accent);
     color: var(--text-color);
     cursor: pointer;
 }
+.portfolio-all-btn{
+        padding: 6px 22px;
+        border: none;
+        border-radius: 6px;
+        font-family: inherit;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.6;
+        letter-spacing: 0.03em;
+        text-align: center;
+        background: var(--accent);
+        color:var(--text-color);
+}
+.portfolio-all-btn:hover,
+.portfolio-all-btn:focus {
+    background: var(--main-background-color);
+    color:var(--main-text-color)
+    cursor: pointer;
+}
+
 .subtitle{
-    font-style: normal;
-    font-weight: 700;
     font-size: 18px;
-    line-height: 36px;
+    line-height:2;
     letter-spacing: 0.06em;
     color: var(--main-text-color);
 }
@@ -342,27 +394,25 @@ ul{
     padding-left: 0;
 }
 .portfolio-item{
-    width: 380px;
+    width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
-    border-bottom:1px solid var(--secondary-border-color) ;
 }
 .portfolio-item:nth-child(3n){
     margin-right: 0;
 }
-.portfolio-item:nth-child(-n+3){
-    margin-bottom: 0;
-}
-.subtitle{
-    margin-left: 24px;
-    margin-top: 20px;
-}
+
 .portfolio-content{
-    margin-left: 24px;
-    margin-bottom: 20px;
-    font-style: normal;
-    font-size: 16px;
-    line-height: 30px;
+    line-height: 1.8;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
+}
+.portfolio-box{
+    padding-right: 24px;
+    padding-left: 24px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid var(--secondary-border-color);
+    border-right:1px solid var(--secondary-border-color) ;
+    border-left:1px solid var(--secondary-border-color); ;
 }
