--- a/css/styles.css
+++ b/css/styles.css
@@ -183,11 +183,12 @@ ul{
     line-height: 1.7;
     letter-spacing: 0.03em;
     color:var(--secondary-text-color);
-    
+    display: flex;
 }
 .item-features{
-    display:inline-block;
+    display: block;
     width: 270px;
+    margin-right: 30px;
    }
 .item-features:last-child {
     margin-right: 0;}
@@ -201,9 +202,6 @@ ul{
     color:var(--main-text-color);
     margin-bottom: 10px;
 }
-.content-features{
-    width: 270px;
-} 
 
 /*work*/
 .work {
@@ -291,8 +289,10 @@ ul{
 .colortext-footer {
     color: var(--text-color);
 }
+.address{
+margin-top: 20px;
+}
 .address-list{
-    margin-top: 20px;
     padding-left: 0;
     font-size: 14px;
     font-style: normal;
@@ -300,6 +300,9 @@ ul{
 }
 .footer-item{
     margin-bottom: 9px;
+}
+.footer-item:last-child{
+margin-bottom: 0;
 }
 .mail{
     font-style: normal;
@@ -379,7 +382,7 @@ ul{
 .portfolio-all-btn:focus {
     background: var(--main-background-color);
     color:var(--main-text-color)
-    cursor: pointer;
+    cursor pointer;
 }
 
 .subtitle{
